# mod-task08-shop

include/: task.h
src/: CMakeLists.txt  main.cpp  task.cpp
test/: CMakeLists.txt  tests.cpp
